// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all pages page '404 Not Found' renders 1`] = `
<div>
  404 Not Found
</div>
`;

exports[`all pages page '404 Not Found' renders as an App page 1`] = `
<html>
  <head>
    <title>
      404 Not Found
    </title>
  </head>
  <body>
    <div>
      404 Not Found
    </div>
  </body>
</html>
`;

exports[`all pages page 'About' renders 1`] = `
<div
  className="PageWrapper__Wrapper-sc-120esh3-0 dqljDC"
>
  <h1
    className="Header__DarkBlue-zt7fth-0 eCcsLu"
  >
    About
  </h1>
  <ul
    className="NavBar__List-pvivyq-0 JFDnC"
  >
    <li
      className="NavBar__Item-pvivyq-1 dvvGHr"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="NavBar__Item-pvivyq-1 dvvGHr"
    >
      <a
        href="/about"
        onClick={[Function]}
      >
        About
      </a>
    </li>
    <li
      className="NavBar__Item-pvivyq-1 dvvGHr"
    >
      <a
        href="/nowhere"
        onClick={[Function]}
      >
        Nowhere
      </a>
    </li>
  </ul>
  <section>
    <div>
      About my boy
    </div>
  </section>
</div>
`;

exports[`all pages page 'About' renders as an App page 1`] = `
<html>
  <head>
    <title>
      About
    </title>
  </head>
  <body>
    <div
      className="PageWrapper__Wrapper-sc-120esh3-0 dqljDC"
    >
      <h1
        className="Header__DarkBlue-zt7fth-0 eCcsLu"
      >
        About
      </h1>
      <ul
        className="NavBar__List-pvivyq-0 JFDnC"
      >
        <li
          className="NavBar__Item-pvivyq-1 dvvGHr"
        >
          <a
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="NavBar__Item-pvivyq-1 dvvGHr"
        >
          <a
            href="/about"
            onClick={[Function]}
          >
            About
          </a>
        </li>
        <li
          className="NavBar__Item-pvivyq-1 dvvGHr"
        >
          <a
            href="/nowhere"
            onClick={[Function]}
          >
            Nowhere
          </a>
        </li>
      </ul>
      <section>
        <div>
          About my boy
        </div>
      </section>
    </div>
  </body>
</html>
`;

exports[`all pages page 'Home Page' renders 1`] = `
<div
  className="PageWrapper__Wrapper-sc-120esh3-0 dqljDC"
>
  <h1
    className="Header__DarkBlue-zt7fth-0 eCcsLu"
  >
    Home Page
  </h1>
  <ul
    className="NavBar__List-pvivyq-0 JFDnC"
  >
    <li
      className="NavBar__Item-pvivyq-1 dvvGHr"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="NavBar__Item-pvivyq-1 dvvGHr"
    >
      <a
        href="/about"
        onClick={[Function]}
      >
        About
      </a>
    </li>
    <li
      className="NavBar__Item-pvivyq-1 dvvGHr"
    >
      <a
        href="/nowhere"
        onClick={[Function]}
      >
        Nowhere
      </a>
    </li>
  </ul>
  <section>
    <div>
      Hello world from the app!
    </div>
  </section>
</div>
`;

exports[`all pages page 'Home Page' renders as an App page 1`] = `
<html>
  <head>
    <title>
      Home Page
    </title>
  </head>
  <body>
    <div
      className="PageWrapper__Wrapper-sc-120esh3-0 dqljDC"
    >
      <h1
        className="Header__DarkBlue-zt7fth-0 eCcsLu"
      >
        Home Page
      </h1>
      <ul
        className="NavBar__List-pvivyq-0 JFDnC"
      >
        <li
          className="NavBar__Item-pvivyq-1 dvvGHr"
        >
          <a
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="NavBar__Item-pvivyq-1 dvvGHr"
        >
          <a
            href="/about"
            onClick={[Function]}
          >
            About
          </a>
        </li>
        <li
          className="NavBar__Item-pvivyq-1 dvvGHr"
        >
          <a
            href="/nowhere"
            onClick={[Function]}
          >
            Nowhere
          </a>
        </li>
      </ul>
      <section>
        <div>
          Hello world from the app!
        </div>
      </section>
    </div>
  </body>
</html>
`;
